Remove unstable vapi

Just use the main vapi, and expect people to define the relevant
SECRET_WITH_UNSTABLE preprocessor macro.

https://bugzilla.gnome.org/show_bug.cgi?id=721429